syntax = "proto3";

package com.flick.data.proto.storage;

import "common.proto";

option java_multiple_files = true;
option java_package = "com.flick.data.proto.storage";

message NodePair {
    bytes key = 1;
    com.flick.data.proto.common.Node value = 2;
}


message NodeAddressPair {
    bytes key = 1;
    com.flick.data.proto.common.NodeAddress value = 2;
}

message UnclaimedInfoBlock {
    enum Action {
        CREATE = 0;
        DELETE = 1;
    }
    bytes accountId = 1;
    Action action = 2;
    bytes blockHash = 3;
}
